--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "btoa": "^1.1.2",
     "client-sessions": "~0.7.0",
     "connect": "2.19.2",
+    "cookie": "^0.3.1",
     "cookie-parser": "~1.3.3",
     "cookie-session": "~1.1.0",
     "crypto": "~0.0.3",
